Added 1st Preliminary Round Result.

--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -61,6 +61,42 @@
 	<li>予選のソフトウェア環境 (TBD)</li>
       </ul>
 
+<h2>第1次予選（予選1次募集）の結果</h2>
+
+<p>
+上記の方式で第1次予選を実施した結果、以下の9チームの決勝進出を決定しました。
+チームの地域バランスの考慮の結果、得点上位の6チームを選抜し、
+残り3チームは海外からの参加チームのうちで成績優秀なチームを選抜しました。
+予選の対戦結果はオンライン対戦サーバー上で今後公開することを予定しています。
+</p>
+
+<p>
+決勝進出チームの皆さん、おめでとうございます！横浜で会いましょう。
+</p>
+
+<p>
+惜しかった皆さん、決勝進出のチャンスはもう一回ありますので、
+ぜひ第2次予選にチャレンジしてください。
+プログラム提出受付を近日中に開始する予定です。
+</p>
+
+      <table align="center">
+        <tr>
+          <th>第1次予選順位</th>
+          <th>チーム名</th>
+        </tr>
+<tr align="center"><td>1</td><td>omu</td></tr>
+<tr align="center"><td>2</td><td>siman</td></tr>
+<tr align="center"><td>3</td><td>Taiyo</td></tr>
+<tr align="center"><td>4</td><td>suikkee</td></tr>
+<tr align="center"><td>5</td><td>nocorupe</td></tr>
+<tr align="center"><td>6</td><td>arukuka & mztmr_nggts</td></tr>
+<tr align="center"><td>18</td><td>Emily</td></tr>
+<tr align="center"><td>20</td><td>nhho</td></tr>
+<tr align="center"><td>27</td><td>Tuure</td></tr>
+      </table>
+     
+
     </section>
 
 <hr/>
