--- a/preliminary.html
+++ b/preliminary.html
@@ -62,6 +62,47 @@
 	<li>Software environment of the preliminary rounds (TBD)</li>
       </ul>
 
+<h2>Result of 1st online preliminary round (1st call for challenge)</h2>
+
+<p>
+By conducting the preliminary round according to the above-mentioned rules and environement, 
+the following 9 teams have been selected for advancing to the World final. 
+By considering regional balance, 
+6 teams with the highest scores among all teams and 3 international teams 
+with good results have been selected. 
+We plan to make the game results available on the online execution server.
+</p>
+
+
+<p>
+Congratulations to all winners! 
+See you in beautiful Yokohama. 
+</p>
+
+<p>
+For other teams that lost the 1st online preliminary round, 
+this year there will be another chance to advance to the World Final so that 
+consider to submit your AI program to 2nd online preliminary round!
+The online system will start to accept submissions soon. 
+</p>
+
+
+      <table align="center">
+        <tr>
+          <th>Place in 1st preliminary round</th>
+          <th>Team name</th>
+        </tr>
+<tr align="center"><td>1</td><td>omu</td></tr>
+<tr align="center"><td>2</td><td>siman</td></tr>
+<tr align="center"><td>3</td><td>Taiyo</td></tr>
+<tr align="center"><td>4</td><td>suikkee</td></tr>
+<tr align="center"><td>5</td><td>nocorupe</td></tr>
+<tr align="center"><td>6</td><td>arukuka & mztmr_nggts</td></tr>
+<tr align="center"><td>18</td><td>Emily</td></tr>
+<tr align="center"><td>20</td><td>nhho</td></tr>
+<tr align="center"><td>27</td><td>Tuure</td></tr>
+      </table>
+
 <hr>
 <footer>
   <div>
