--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Feb 12: <a href="preliminary.html">The result of 1st call for challenge of online preliminary round</a> is out! Congratulations to all winners! For other teams that lost the 1st online preliminary round, 
+this year there will be another chance to advance to the World Final so that 
+consider to submit your AI program to 2nd online preliminary round!
 <li>Feb 9: 1st call for challenge of online preliminary round has been over. The result will be announced on Feb 12. (TBD)</li>
 <li>Feb 8 AoE: <a href="faq.html">FAQ page</a> has been updated about "timeout" issue. 
 <li>Jan 26 AoE: The contest system is now accepting your AI program submissions! If you have any further problem, let us know it at samurai2015-contact@ipsj.or.jp
@@ -186,14 +189,12 @@ All World Final contestants will be presented on the contest site.
       <h2>Important Dates</h2>
       <ul>
       	<li>Rule and platform announcement: Oct-Nov 2015</li>
-<font color="red"><b>
         <li>Due of 1st call for challenge of online preliminary round: Feb 8, 2016 AoE</li>
-        <li>Result announcement of 1st call for challenge of online preliminary round: Feb 12, 2016 (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+        <li>Result announcement of 1st call for challenge of online preliminary round: Feb 12, 2016. Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution. 
 </li>
         <li>Due of 2nd call for challenge of online preliminary round: Feb 22, 2016 AoE</li>
         <li>Result announcement of 2nd call for challenge of online preliminary round: Feb 26, 2016 AoE (TBD). Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
 </li>
-</b></font>
         <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
       </ul>
     </section>
