Updated 1st preliminary round result

--- a/preliminary.html
+++ b/preliminary.html
@@ -465,6 +465,13 @@ The online system will start to accept submissions soon.
 	</tr>
 </table>
 
+<p>
+Honorable mention: adachi_masatoshi, baby, dragon, hero, imyme, jukain, kohori_shingo, 
+ma2snct, macky, meg, mikakoshi, nishy, odan, okabe_masashi, onerock, river, ryry, 
+saccheee, sandbox, sardin, sh2, shiny, shugar, shunoimasime, teatea, test, ticker, 
+tree, uoshi, vex, ガオガイガー
+</p>
+
 <hr>
 <footer>
   <div>
