Final round rules.

--- a/final-jp.html
+++ b/final-jp.html
@@ -51,12 +51,12 @@
 </header>
 <hr/>
 
-    <section id="importantdates">
-      <h2>決勝</h2>
-<p>(TBD)</p>
-    </section>
+<h2>決勝</h2>
+<ul>
+  <li><a href="FinalRoundRule-jp.pdf">決勝ルール</a></li>
+</ul>
 
-<hr/>
+<hr>
 <footer>
   <div>
     <table class="multicolumn">
