--- a/final.html
+++ b/final.html
@@ -52,10 +52,10 @@
 </header>
 <hr/>
 
-   <section id="importantdates">
-      <h2>Final Round</h2>
-
-<p>(TBD)</p>
+<h2>Final Round</h2>
+<ul>
+  <li><a href="FinalRoundRule-en.pdf">Final Round Rules</a></li>
+</ul>
 
 <hr>
 <footer>
