--- a/index-jp.html
+++ b/index-jp.html
@@ -107,6 +107,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+	<li>2月15日: 決勝ラウンドのルールを<a href="final-jp.html">決勝のページ</a>に掲載しました。</li>
 <li>2月13日: <a href="preliminary-jp.html">オンライン予選1次募集の結果の詳細</a>を掲載しました。
 <li>2月12日: <a href="preliminary-jp.html">オンライン予選1次募集における決勝への選抜結果</a>を掲載しました。決勝進出チームの皆さん、おめでとうございます！ 惜しかった皆さん、決勝進出のチャンスはもう一回ありますので、 ぜひ第2次予選にチャレンジしてください。
 <li>2月9日: オンライン予選1次募集を日本時間 2月9日 21:59をもって締め切りました。結果発表は2月12日を予定しています。
