--- a/rules-jp.html
+++ b/rules-jp.html
@@ -61,7 +61,9 @@
 	    SamurAI 3x3 ゲームの概要</a></li>
 	<li><a href="ruledetails-1116-jp.pdf">
 	    ルールの詳細とプログラミングインタフェース</a></li>
-	<li>スコアリング、軍団の組合せ、対戦の組合せなどについては、今後発表する予定です。</li>
+	<li>予選と決勝のトーナメントルールについては、それぞれ
+	  <a href="preliminary-jp.html">予選のページ</a>および
+	  <a href="final-jp.html">決勝のページ</a>をご覧ください。</li>
       </ul>
     </section>
 
