--- a/rules.html
+++ b/rules.html
@@ -66,8 +66,9 @@
 	    Outline of the Samurai 3x3 Game</a></li>
 	<li><a href="ruledetails-1116-en.pdf">
 	    Rule Details and Programming Interface</a></li>
-	<li>Tournament rules including scoring rules, army combination
-	  and pairing principles are to be announced.</li>
+	<li>Tournament rules are described
+	  in <a href="preliminary.html">the preliminary round page</a>
+	  and <a href="final.html">the final round page</a>.</li>
       </ul>
     </section>
     <!--#include virtual="footer.html" -->
