--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+	<li>Feb 15: Rules of the final round is now available in <a href="final.html"> the final round page</a>.</li>
 <li>Feb 13: <a href="preliminary.html">Detail of the 1st preliminary round result</a> is out!. 
 <li>Feb 12: <a href="preliminary.html">The result of 1st call for challenge of online preliminary round</a> is out! Congratulations to all winners! For other teams that lost the 1st online preliminary round, 
 this year there will be another chance to advance to the World Final so that 
