Put 2nd Preliminary Round results.

--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -58,10 +58,400 @@
 	    予選のルール</a></li>
 	<li><a href="HardwareInfo.html">
 	    予選のハードウェア環境</a></li>
-	<li>予選のソフトウェア環境 (TBD)</li>
       </ul>
     </section>
 
+
+<h2>第2次予選（予選2次募集）の結果</h2>
+
+<p>
+上記の方式で第2次予選を実施した結果、参加99チーム中で以下の9チームの決勝進出を決定しました。
+チームの地域バランスの考慮の結果、得点上位の7チームを選抜し、残り2チームは海外からの参加チームのうちで成績優秀なチームを選抜しました。予選の対戦結果はオンライン対戦サーバー上で今後公開することを予定しています。
+</p>
+
+<p>
+決勝進出チームの皆さん、おめでとうございます！横浜で会いましょう。
+</p>
+
+<p>
+惜しかった皆さん、決勝をぜひ一緒に観戦しましょう。
+また懇親会に先着順で招待する予定です。 
+懇親会招待については後日、事務局から連絡します。
+</p>
+
+<table>
+	<tr align="center">
+		<th>Place</th>
+		<th>Team name</th>
+		<th>Points</th>
+		<th>Selected for world final</th>
+	</tr>
+	<tr align="center">
+		<td>1</td>
+		<td>sinryakudegeso</td>
+		<td>23890</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>2</td>
+		<td>kwrig</td>
+		<td>21912</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>3</td>
+		<td>piyo</td>
+		<td>21616</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>4</td>
+		<td>yamatchan</td>
+		<td>20873</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>5</td>
+		<td>iwashi31</td>
+		<td>20844</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>6</td>
+		<td>takapt</td>
+		<td>20722</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>7</td>
+		<td>y_kawano</td>
+		<td>20695</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>8</td>
+		<td>ryuichi</td>
+		<td>20554</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>9</td>
+		<td>Zoukin</td>
+		<td>20518</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>10</td>
+		<td>hirokazu1020</td>
+		<td>20314</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>11</td>
+		<td>Machtar</td>
+		<td>20260</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>12</td>
+		<td>ZABURO</td>
+		<td>20159</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>13</td>
+		<td>utsubo</td>
+		<td>20033</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>14</td>
+		<td>raven38</td>
+		<td>20019</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>15</td>
+		<td>maroon</td>
+		<td>19889</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>16</td>
+		<td>サンプルAIナゲ太郎</td>
+		<td>19883</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>17</td>
+		<td>fmhr</td>
+		<td>19844</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>18</td>
+		<td>KuasAI104</td>
+		<td>19757</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>19</td>
+		<td>haraduka</td>
+		<td>19716</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>20</td>
+		<td>ji_no_papo</td>
+		<td>19698</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>21</td>
+		<td>bobuhiro</td>
+		<td>19661</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>22</td>
+		<td>believeitmyway</td>
+		<td>19545</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>23</td>
+		<td>sash</td>
+		<td>19323</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>24</td>
+		<td>ys60123in</td>
+		<td>19234</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>25</td>
+		<td>三隈みく</td>
+		<td>19229</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>26</td>
+		<td>johnnyhibiki</td>
+		<td>19080</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>27</td>
+		<td>javasparrow</td>
+		<td>19057</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>28</td>
+		<td>kimiyuki</td>
+		<td>19006</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>29</td>
+		<td>kni2621</td>
+		<td>18897</td>
+		<td>Selected</td>
+	</tr>
+	<tr align="center">
+		<td>29</td>
+		<td>Tamflex</td>
+		<td>18897</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>31</td>
+		<td>ponyopoppo</td>
+		<td>18821</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>32</td>
+		<td>ぴこさんだー</td>
+		<td>18762</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>33</td>
+		<td>oga157</td>
+		<td>18647</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>34</td>
+		<td>emon</td>
+		<td>18633</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>35</td>
+		<td>WAIS</td>
+		<td>18513</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>36</td>
+		<td>ThreeStones</td>
+		<td>18428</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>37</td>
+		<td>tkw</td>
+		<td>18335</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>38</td>
+		<td>hiro116s</td>
+		<td>18286</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>39</td>
+		<td>okazaki</td>
+		<td>18247</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>40</td>
+		<td>chankame</td>
+		<td>18238</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>41</td>
+		<td>hiromu</td>
+		<td>18234</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>42</td>
+		<td>PnumaSON</td>
+		<td>18228</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>43</td>
+		<td>Kuni88</td>
+		<td>18039</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>44</td>
+		<td>_|dropout|_</td>
+		<td>17964</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>45</td>
+		<td>macky</td>
+		<td>17313</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>46</td>
+		<td>owl</td>
+		<td>17222</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>47</td>
+		<td>tsukammo</td>
+		<td>17217</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>48</td>
+		<td>odan</td>
+		<td>17065</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>49</td>
+		<td>Mahtar</td>
+		<td>17056</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>50</td>
+		<td>ガオガイガー</td>
+		<td>16870</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>51</td>
+		<td>jukain</td>
+		<td>16794</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>52</td>
+		<td>AIzu_dAI</td>
+		<td>16766</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>53</td>
+		<td>baby</td>
+		<td>16716</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>54</td>
+		<td>nishy</td>
+		<td>16701</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>55</td>
+		<td>shugar</td>
+		<td>16608</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>56</td>
+		<td>sandbox</td>
+		<td>16400</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>57</td>
+		<td>okabe_masashi</td>
+		<td>16331</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>58</td>
+		<td>torii_chinatsu</td>
+		<td>16315</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>59</td>
+		<td>adachi_masatoshi</td>
+		<td>16314</td>
+		<td></td>
+	</tr>
+	<tr align="center">
+		<td>60</td>
+		<td>kohori_shingo</td>
+		<td>16305</td>
+		<td></td>
+	</tr>
+</table>
+
+<p>
+Honorable mention: :-{ , clannad, deshi, dragon, GOKUNURI_v58, hero, imyme, lazymii&menphim, ma2snct, meg, mikakoshi, ninhydrin, nodn, onerock, river, ryry, saccheee, sanktuari, sardin, sh2, shiny, shunoimasime, taniguchi_toshio, teatea, test, ticker, tree, uoshi, vex, あ
+</p>
+<hr/>
 
 <h2>第1次予選（予選1次募集）の結果</h2>
 
