Put Final results

--- a/final-jp.html
+++ b/final-jp.html
@@ -52,9 +52,88 @@
 <hr/>
 
 <h2>決勝</h2>
+
+<h3>ルール</h3>
 <ul>
   <li><a href="FinalRoundRule-jp.pdf">決勝ルール</a></li>
 </ul>
+
+<h3>結果</h3>
+
+<p>
+多くの選手、スポンサー、参加者ならびにスタッフ・関係者により、
+SamurAI Coding 2015-16 World Final Roundは無事終了しました。
+グループリーグの対戦の結果、
+18チーム中次の6チームが最終の決勝に進出しました:
+piyo, sinryakudegeso, Tuure, kwrig, arukuka & mztmr_nggts, siman。
+さらに決勝リーグの対戦の結果、
+チーム piyo が優勝しました。 
+また、賞金およびスポンサー賞は下記のチームに授与されました。
+おめでとうございます！ さらに懇親会にてネットワーキングを実施しました。 ありがとうございました、そして、また次の機会にお会いしましょう！
+</p>
+
+<ul>
+<li>賞金: piyo 50,000JPY, sinryakudegeso 30,000JPY, 
+Tuure 10,000JPY, kwrig 5,000JPY, arukuka & mztmr_nggts 5,000JPY, siman 5,000JPY
+<li>レコチョク スポンサー賞 (RecoChoku Music Gift Card): piyo, sinryakudegeso, Tuure
+<li>いい生活 スポンサー賞 (Sony MESH): piyo, kwrig
+</ul>
+
+<img src="images/FinalLeagueStats.png" width="600"/>
+
+<table>
+	<tr align="center">
+		<th>Place</th>
+		<th>Team name</th>
+		<th>Points</th>
+	</tr>
+	<tr align="center">
+		<td>1</td>
+		<td>piyo</td>
+		<td>25394</td>
+	</tr>
+	<tr align="center">
+		<td>2</td>
+		<td>sinryakudegeso</td>
+		<td>24861</td>
+	</tr>
+	<tr align="center">
+		<td>3</td>
+		<td>Tuure</td>
+		<td>23757</td>
+	</tr>
+	<tr align="center">
+		<td>4</td>
+		<td>kwrig</td>
+		<td>20609</td>
+	</tr>
+	<tr align="center">
+		<td>5</td>
+		<td>arukuka & mztmr_nggts</td>
+		<td>19563</td>
+	</tr>
+	<tr align="center">
+		<td>6</td>
+		<td>siman</td>
+		<td>18749</td>
+	</tr>
+</table>
+
+<p></p>
+
+<p>
+7th Place (Finalists): omu, yamatchan, Emily, kni2621 (Group A), 
+iwashi31, nhho, nocorupe, KuasAI104 (Group B), 
+Taiyo, suikkee, y_kawano, takapt (Group C)
+</p>
+
+<h3>ビデオ・写真</h3>
+
+<p>
+当日の会場中継ビデオをニコニコ生放送よりご覧いただけます: <a href="http://live.nicovideo.jp/watch/lv253878684">http://live.nicovideo.jp/watch/lv253878684</a>
+</p>
+
+<img src="images/Final1.jpg" width="300"/> <img src="images/Final2.jpg" width="300"/>
 
 <hr>
 <footer>
