--- a/final.html
+++ b/final.html
@@ -53,9 +53,89 @@
 <hr/>
 
 <h2>Final Round</h2>
+
+<h3>Rules</h3>
+
 <ul>
   <li><a href="FinalRoundRule-en.pdf">Final Round Rules</a></li>
 </ul>
+
+<h3>Results</h3>
+
+<p>
+Thanks to many contestants, sponsors, supporters and staffs, 
+SamurAI Coding 2015-16 World Final Round was successfully over! 
+By conducting group league matches, 
+six teams (among 18) advanced to the Final league: 
+piyo, sinryakudegeso, Tuure, kwrig, arukuka & mztmr_nggts, and siman. 
+And finally the winner was team piyo! 
+And the following teams received prizes. 
+Congratulations! Moreover we had a great networking at the banquet! 
+Thank you again, and, see you next time!
+</p>
+
+<ul>
+<li>Cash Prize: piyo 50,000JPY, sinryakudegeso 30,000JPY, 
+Tuure 10,000JPY, kwrig 5,000JPY, arukuka & mztmr_nggts 5,000JPY, siman 5,000JPY
+<li>RecoChoku Prize (RecoChoku Music Gift Card): piyo, sinryakudegeso, Tuure
+<li>e-Seikatsu Prize (Sony MESH): piyo, kwrig
+</ul>
+
+<img src="images/FinalLeagueStats.png" width="600"/>
+
+<table>
+	<tr align="center">
+		<th>Place</th>
+		<th>Team name</th>
+		<th>Points</th>
+	</tr>
+	<tr align="center">
+		<td>1</td>
+		<td>piyo</td>
+		<td>25394</td>
+	</tr>
+	<tr align="center">
+		<td>2</td>
+		<td>sinryakudegeso</td>
+		<td>24861</td>
+	</tr>
+	<tr align="center">
+		<td>3</td>
+		<td>Tuure</td>
+		<td>23757</td>
+	</tr>
+	<tr align="center">
+		<td>4</td>
+		<td>kwrig</td>
+		<td>20609</td>
+	</tr>
+	<tr align="center">
+		<td>5</td>
+		<td>arukuka & mztmr_nggts</td>
+		<td>19563</td>
+	</tr>
+	<tr align="center">
+		<td>6</td>
+		<td>siman</td>
+		<td>18749</td>
+	</tr>
+</table>
+
+<p></p>
+
+<p>
+7th Place (Finalists): omu, yamatchan, Emily, kni2621 (Group A), 
+iwashi31, nhho, nocorupe, KuasAI104 (Group B), 
+Taiyo, suikkee, y_kawano, takapt (Group C)
+</p>
+
+<h3>Video and Photo</h3>
+
+<p>
+Video is available at Nico Nico Live: <a href="http://live.nicovideo.jp/watch/lv253878684">http://live.nicovideo.jp/watch/lv253878684</a>
+</p>
+
+<img src="images/Final1.jpg" width="300"/> <img src="images/Final2.jpg" width="300"/>
 
 <hr>
 <footer>
