Added Final Photos.

--- a/final-jp.html
+++ b/final-jp.html
@@ -133,7 +133,15 @@ Taiyo, suikkee, y_kawano, takapt (Group C)
 当日の会場中継ビデオをニコニコ生放送よりご覧いただけます: <a href="http://live.nicovideo.jp/watch/lv253878684">http://live.nicovideo.jp/watch/lv253878684</a>
 </p>
 
-<img src="images/Final1.jpg" width="300"/> <img src="images/Final2.jpg" width="300"/>
+<a href="images/Final1.jpg"><img src="images/Final1.jpg" width="300"/></a> <a href="images/Final2.jpg"><img src="images/Final2.jpg" width="300"/></a> <a href="images/Final3.jpg"><img src="images/Final3.jpg" width="300"/></a>
+
+<a href="images/Final4.jpg"><img src="images/Final4.jpg" width="300"/></a> <a href="images/Final5.jpg"><img src="images/Final5.jpg" width="300"/></a> <a href="images/Final6.jpg"><img src="images/Final6.jpg" width="300"/></a>
+
+<a href="images/Final7.jpg"><img src="images/Final7.jpg" width="300"/></a> <a href="images/Final8.jpg"><img src="images/Final8.jpg" width="300"/></a> <a href="images/Final9.jpg"><img src="images/Final9.jpg" width="300"/></a>
+
+<a href="images/Final10.jpg"><img src="images/Final10.jpg" width="300"/></a> <a href="images/Final11.jpg"><img src="images/Final11.jpg" width="300"/></a> <a href="images/Final12.jpg"><img src="images/Final12.jpg" width="300"/></a>
+
+<a href="images/Final13.jpg"><img src="images/Final13.jpg" width="300"/></a>
 
 <hr>
 <footer>
