--- a/index.html
+++ b/index.html
@@ -105,14 +105,11 @@ aiming to cultivate the younger generation so they can become leading researcher
 </tr>
 </table>
 </p>
-<p>
-    If you are interested in sponsoring SamurAI Coding 2015-16, please contact us at <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">samurai2015-contact@ipsj.or.jp</a>. There are several types of Sponsorship Opportunities: Shogun, Platinum, Gold, Supporter, Prize, and Media. <a href="http://samuraicoding.info/sponsor-jp.html">Call for Sponsors in Japanese</a> is also available. 
-</p>
-
     </section>
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Mar 16: More photos available on <a href="final.html"> the final round page</a>.
 <li>Mar 12: The world final round was successfully over! See the result at <a href="final.html"> the final round page</a>. See you next time!</li>
 <li>Feb 29: <a href="preliminary.html">The result of 2nd call for challenge of online preliminary round</a> is out! Congratulations to all winners! For other teams that lost the 1st and 2nd online preliminary rounds, come to Yokohama and watch the World final together! Moreover later we will let you know about the banquet invitation soon. 
 	<li>Feb 15: Rules of the final round is now available in <a href="final.html"> the final round page</a>.</li>
