--- a/index-jp.html
+++ b/index-jp.html
@@ -99,14 +99,11 @@
 </table>
 </p>
 
-<p>
-    <a href="sponsor-jp.html">スポンサーを現在募集中です</a>。ぜひご検討ください。
-</p>
-    
     </section>
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+        <li>3月16日: より多くの写真を<a href="final-jp.html">決勝ページ</a>に掲載しました。
         <li>3月12日: 決勝（The world final round）は無事終了しました! 結果は<a href="final-jp.html">決勝ページ</a>を参照ください。また次の機会にお会いしましょう！
 	<li>2月15日: 決勝ラウンドのルールを<a href="final-jp.html">決勝のページ</a>に掲載しました。</li>
 <li>2月29日: <a href="preliminary-jp.html">オンライン予選2次募集における決勝への選抜結果</a>を掲載しました。決勝進出チームの皆さん、おめでとうございます！ 惜しかった皆さん、ぜひ決勝を一緒に観戦しましょう。また懇親会への先着順招待を実施することを検討しています。
