Added Money Forward as Media Sponsor.

--- a/index-jp.html
+++ b/index-jp.html
@@ -22,7 +22,7 @@
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a><br>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> <a href="https://moneyforward.com/">マネーフォワード</a><br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
@@ -77,6 +77,7 @@
 <td>株式会社日立製作所</td>
 <td>株式会社レコチョク</td>
 <td>TIS株式会社</td>
+<td> </td>
 </tr>
 <tr>
 <td><center><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></center></td>
@@ -89,6 +90,7 @@
 <td>富士通株式会社</td>
 <td>クレイ・ジャパン・インク</td>
 <td>株式会社ジースタイラス</td>
+<td><a href="https://moneyforward.com/">株式会社マネーフォワード</a></td>
 </tr>
 <tr>
 <td><center><a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a></center></td>
@@ -281,6 +283,8 @@
 <h3>メディアスポンサー</h3>
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
+
+<p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
           </section>
         </td>
         <td>
