--- a/final.html
+++ b/final.html
@@ -61,7 +61,7 @@
   <li><a href="FinalRoundRule-en.pdf">Final Round Rules</a></li>
 </ul>
 
-<h3>Results</h3>
+<h3>Results and Submitted Program</h3>
 
 <p>
 Thanks to many contestants, sponsors, supporters and staffs, 
@@ -73,6 +73,10 @@ And finally the winner was team piyo!
 And the following teams received prizes. 
 Congratulations! Moreover we had a great networking at the banquet! 
 Thank you again, and, see you next time!
+</p>
+
+<p>
+AI programs of the finalists have been published on the result table.
 </p>
 
 <ul>
@@ -92,12 +96,12 @@ Tuure 10,000JPY, kwrig 5,000JPY, arukuka & mztmr_nggts 5,000JPY, siman 5,000JPY
 	</tr>
 	<tr align="center">
 		<td>1</td>
-		<td>piyo</td>
+		<td><a href="programs/2015-16-Team piyo.zip">piyo</a></td>
 		<td>25394</td>
 	</tr>
 	<tr align="center">
 		<td>2</td>
-		<td>sinryakudegeso</td>
+		<td><a href="programs/2015-16-sinryakudegeso.zip">sinryakudegeso</a></td>
 		<td>24861</td>
 	</tr>
 	<tr align="center">
@@ -107,17 +111,17 @@ Tuure 10,000JPY, kwrig 5,000JPY, arukuka & mztmr_nggts 5,000JPY, siman 5,000JPY
 	</tr>
 	<tr align="center">
 		<td>4</td>
-		<td>kwrig</td>
+		<td><a href="programs/2015-16-kwrig.zip">kwrig</a></td>
 		<td>20609</td>
 	</tr>
 	<tr align="center">
 		<td>5</td>
-		<td>arukuka & mztmr_nggts</td>
+		<td><a href="programs/2015-16-arukuka & mztmr_nggts.zip">arukuka & mztmr_nggts</a></td>
 		<td>19563</td>
 	</tr>
 	<tr align="center">
 		<td>6</td>
-		<td>siman</td>
+		<td><a href="programs/2015-16-siman.zip">siman</a></td>
 		<td>18749</td>
 	</tr>
 </table>
