--- a/index-jp.html
+++ b/index-jp.html
@@ -105,6 +105,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+        <li>6月4日: 決勝戦に進出した各チームからいただいたAIプログラムを<a href="final-jp.html">決勝ページ</a>上で公開しました。
         <li>3月16日: より多くの写真を<a href="final-jp.html">決勝ページ</a>に掲載しました。
         <li>3月12日: 決勝（The world final round）は無事終了しました! 結果は<a href="final-jp.html">決勝ページ</a>を参照ください。また次の機会にお会いしましょう！
 	<li>2月15日: 決勝ラウンドのルールを<a href="final-jp.html">決勝のページ</a>に掲載しました。</li>
